--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@
     padding: 1.5em;
     flex: 1 1 0;
     aspect-ratio: 1 / 1 ;
+    font-size: 1.5rem;
 }
 
 .grid-cell:last-child {
@@ -32,4 +33,19 @@
 
 .grid-row:last-child {
     border-bottom: none;
+}
+
+.winner {
+    display:none;
+}
+
+.errors {
+    display: none;
+}
+
+.shown {
+    display: block;
+    text-align: center;
+    margin-top: 1em;
+    font-size: 1.5rem;
 }
