--- a/css/styles.css
+++ b/css/styles.css
@@ -49,3 +49,10 @@
     margin-top: 1em;
     font-size: 1.5rem;
 }
+
+.game-buttons {
+    width: 50%;
+    margin: 1em auto;
+    display: flex;
+    justify-content: space-between;
+}
