--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 
 .tic-tac-toe-grid {
     display: flex;
@@ -19,7 +23,7 @@
     font-size: 1rem;
     padding: 1.5em;
     flex: 1 1 0;
-    aspect-ratio: 1 / 1 ;
+    aspect-ratio: 1 / 1;
     font-size: 1.5rem;
 }
 
@@ -27,7 +31,7 @@
     border-right: none;
 }
 
-.grid-cell:hover{
+.grid-cell:hover {
     cursor: pointer;
 }
 
@@ -36,7 +40,7 @@
 }
 
 .winner {
-    display:none;
+    display: none;
 }
 
 .errors {
@@ -55,4 +59,27 @@
     margin: 1em auto;
     display: flex;
     justify-content: space-between;
+}
+
+.players {
+    display: flex;
+    justify-content: space-between;
+    width: 75%;
+    margin: 1em auto;
+}
+
+.player {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.player-turn {
+    display: flex;
+    justify-content: center;
+    margin: 1em 0;
+}
+
+.hidden {
+    display: none;
 }
