--- a/css/styles.css
+++ b/css/styles.css
@@ -56,9 +56,9 @@
 
 .game-buttons {
     width: 50%;
-    margin: 1em auto;
+    margin: 1.5em auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .players {
