Add a _gameEnded function to the display controller

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,8 @@
     align-items: center;
 }
 
-.player-turn {
+.player-turn,
+.game-over {
     display: flex;
     justify-content: center;
     margin: 1em 0;
