--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,14 @@
     padding: 0;
 }
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.title {
+    text-align: center;
+}
+
 .tic-tac-toe-grid {
     display: flex;
     flex-direction: column;
@@ -19,12 +27,15 @@
 
 .grid-cell {
     border-right: solid 2px pink;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
     font-size: 1rem;
     padding: 1.5em;
     flex: 1 1 0;
     aspect-ratio: 1 / 1;
-    font-size: 1.5rem;
+    font-size: 2rem;
 }
 
 .grid-cell:last-child {
@@ -39,10 +50,7 @@
     border-bottom: none;
 }
 
-.winner {
-    display: none;
-}
-
+.winner,
 .errors {
     display: none;
 }
@@ -51,7 +59,6 @@
     display: block;
     text-align: center;
     margin-top: 1em;
-    font-size: 1.5rem;
 }
 
 .game-buttons {
@@ -79,7 +86,7 @@
 .game-over {
     display: flex;
     justify-content: center;
-    margin: 1.5em 0;
+    margin: 1em 0;
 }
 
 .hidden {
