--- a/css/styles.css
+++ b/css/styles.css
@@ -7,16 +7,23 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.container {
+    max-height: 100vh;
+}
+
 .title {
     text-align: center;
 }
 
 .tic-tac-toe-grid {
+    height: 100%;
     display: flex;
     flex-direction: column;
     margin: auto;
     margin-top: 20px;
     width: 50%;
+    justify-content: center;
+    align-items: center;
 }
 
 .grid-row {
@@ -32,9 +39,9 @@ body {
     justify-content: center;
     text-align: center;
     font-size: 1rem;
-    padding: 1.5em;
-    flex: 1 1 0;
-    aspect-ratio: 1 / 1;
+    flex: 0 0 100px;
+    height: 100px;
+    aspect-ratio: 1/1;
     font-size: 2rem;
 }
 
@@ -50,7 +57,7 @@ body {
     border-bottom: none;
 }
 
-.winner{
+.winner {
     display: none;
 }
 
